--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "name": "dynamic-form-renderer",
-  "private": true,
+  "exports": {
+    ".": {
+      "development": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,17 +27,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
-    "react": "^19.1.1",
-    "i18next": "23.11.5",
-    "react-i18next": "14.1.2",
-    "i18next-browser-languagedetector": "8.0.0",
+    "@tailwindcss/vite": "^4.1.12",
     "html-parse-stringify": "3.0.1",
+    "i18next": "23.11.5",
+    "i18next-browser-languagedetector": "8.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "react-i18next": "14.1.2",
+    "tailwindcss": "^4.1.12",
     "void-elements": "3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.8",
+    "@vitejs/plugin-react": "^5.0.2",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
