fix library exports

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "name": "dynamic-form-renderer",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "development": "./src/index.ts",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
     },
     "./style.css": {
       "import": "./dist/style.css",
@@ -31,8 +30,6 @@
     "html-parse-stringify": "3.0.1",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
     "react-i18next": "14.1.2",
     "tailwindcss": "^4.1.12",
     "void-elements": "3.1.0"
@@ -41,6 +38,8 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.8",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
