--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,37 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "declaration": true,
-    "declarationDir": "dist",
-    "emitDeclarationOnly": false,
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "isolatedModules": false,
-    "moduleResolution": "Node",
-    "jsx": "react-jsx",
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "strict": true,
     "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true, // Vite handles transpilation, this is for type-checking. `vite-plugin-dts` overrides this for declaration generation.
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
+    /* Library-specific settings */
+    "declaration": true,           // Generates corresponding '.d.ts' file.
+    "declarationMap": true,        // Generates a source map for each '.d.ts' file.
+    "emitDeclarationOnly": true,   // Only emit '.d.ts' files; Vite handles the JS.
+    "outDir": "dist",              // Specifies the output directory for types.,
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*",
         "src/*"
       ]
     }
   },
-  "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "include": ["src"], // IMPORTANT: Only include the 'src' directory for the library build.
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
