--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     }
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "version": "0.0.0",
   "type": "module",
@@ -38,8 +38,6 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.8",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
     "@vitejs/plugin-react": "^5.0.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
